k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: angular
    spec:
      containers:
      - args:
        - ng
        - serve
        - --host
        - 0.0.0.0
        - --port
        - "4200"
        image: cricdatabase/angular:0.1.1
        imagePullPolicy: ""
        name: angular
        ports:
        - containerPort: 4200
        resources: {}
        volumeMounts:
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
status: {}
