k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    name: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nodejs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        name: nodejs
    spec:
      containers:
      - args:
        - nodemon
        - ./src/server.js
        image: cricdatabase/nodejs:0.1.5
        imagePullPolicy: ""
        name: nodejs
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /opt/cric/backend/src/assets/imagens
          name: nodejs-image
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nodejs-image
        persistentVolumeClaim:
          claimName: nodejs-image
status: {}
