k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.version: 1.21.0 (992df58d8)
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
  creationTimestamp: null
  labels:
    name: nodejs
  name: nodejs
spec:
  type: LoadBalancer
  ports:
  - name: "3000"
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    name: nodejs
status:
  loadBalancer: {}
