k8s/cricdatabase-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cricdatabase
spec:
  rules:
  - host: database.cric.com.br
    http:
      paths:
      - path: /api
        backend:
          serviceName: nodejs
          servicePort: 3000
      - backend:
          serviceName: angular
          servicePort: 8080
