k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cricdatabase
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: nodejs
          servicePort: 3000
      - path: /
        backend:
          serviceName: angular
          servicePort: 8080
